- Removed ability to shift right click with an equipped backpack to deposit immediately. (Hard to do code-wise, and it is now very easy to unequip and deposit, then reequip)

Bug Fixes
- Fixed right click to open backpacks directly persisting and causing you to pick up a half stack of an item occasionally.
- Fixed item pickup sound constantly playing when it shouldn't (e.g. backpack was full)
------------------------------------------------------
Version 1.10.2 - 2.2.20
------------------------------------------------------
Additions
- Added configurable whitelist of additional items to add to the mining filter.

Changes
- Changed 'right-click to open directly' to be a much smaller message/packet of information.
    - This fixes a crash with packet being too large (e.g. right clicking a bag full of bees).

Bug Fixes
- Fixed inter-mod incompatibility with TombManyGraves.
- Fixed item not appearing in world correctly when shift-right clicking an inventory with a placable item conflicting with an equipped backpack with the quick deposit upgrade.
- Fixed item deletion with items not being properly quick deposited into TiCon multiblocks (fix should be good for other modded inventories as well).
- Fixed dupe where you could get multiple upgrades returned when adding multiple upgrades (stack size > 1) at once to a backpack and then removing one.
- Fixed item loss when using Inventory Sorter to move items to and from ghost/filter slots.
------------------------------------------------------
Version 1.10.2 - 2.2.19
------------------------------------------------------
Additions
- None

Changes
- No longer able to right click from any inventory to open backpacks, just from other backpacks or your main 'e' inventory.

Bug Fixes
- Fixed error with block placing causing issues.
- Fixed duplication/desync errors when opening backpacks directly from other inventories.
------------------------------------------------------
Version 1.10.2 - 2.2.18